# docu

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
doc/: index.md  package.json
doc/.vitepress/: config.js
doc/architecture/: code-organization.md  index.md  processing-flow.md
doc/contributing/: code-style.md  index.md  pull-requests.md
doc/developers/: api-reference.md  getting-started.md  index.md
docu/: __init__.py  __main__.py  ast_utils.py  cli.py  doc_parsers.py  docgen.py  generators.py  models.py  parsers.py  template_manager.py  watcher.py
docu/templates/: default.html  minimal.html  minimal.json  modern.html  modern.json  rtd.html  rtd.json  schema.json
examples/: completeDocs.py  nodocs.py
scripts/: build.sh  demo.sh  serve.sh  setup.sh  test.sh
tests/: test_cli.py  test_docgen.py  test_templates.py
